--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                         <div class="header-mainnav">
                             <nav class="mainmenu-nav">
                                 <ul class="mainmenu">
-                                    <li class=""><a href="index.html" class="active">Home</a></li>
+                                    <li class=""><a class="active" href="index.html">Home</a></li>
                                     <li class=""><a href="about-us.html">About</a></li>
                                     <li class="has-droupdown"><a href="#">Academics</a>
                                         <ul class="submenu">
@@ -168,7 +168,7 @@
                         </div>
                     </div>
                     <ul class="mainmenu">
-                        <li class=""><a href="index.html">Home</a></li>
+                        <li class=""><a class="active" href="index.html">Home</a></li>
                         <li class=""><a href="about-us.html">About</a></li>
 
                         <li class="has-droupdown"><a href="#">Academics</a>
