--- a/about-us.html
+++ b/about-us.html
@@ -510,7 +510,7 @@
                                         <div class="col-lg-6">
                                             <ul class="footer-link link-hover">
                                                 <li><a href="index.html">Home</a></li>
-                                                <li><a href="about-us.html">About</a></li>
+                                                <li><a href="about-us.html" class="active">About</a></li>
                                                 <li><a href="curriculum.html">Curriculum</a></li>
                                                 <li><a href="sports.html">Sports</a></li>
                                                 <li><a href="events.html">Events</a></li>
