--- a/contact-us.html
+++ b/contact-us.html
@@ -117,7 +117,7 @@
                                         </ul>
                                     </li>
                                     <li class=""><a href="gallery.html">Gallery</a></li>
-                                    <li class=""><a href="contact-us.html">Contact Us</a></li>
+                                    <li class=""><a class="active" href="contact-us.html">Contact Us</a></li>
                                 </ul>
                             </nav>
                         </div>
