--- a/gallery.html
+++ b/gallery.html
@@ -116,7 +116,7 @@
                                             <li><a href="faq.html">FAQ's</a></li>
                                         </ul>
                                     </li>
-                                    <li class=""><a href="gallery.html">Gallery</a></li>
+                                    <li class=""><a class="active" href="gallery.html">Gallery</a></li>
                                     <li class=""><a href="contact-us.html">Contact Us</a></li>
                                 </ul>
                             </nav>
