--- a/about-us.html
+++ b/about-us.html
@@ -100,7 +100,7 @@
                             <nav class="mainmenu-nav">
                                 <ul class="mainmenu">
                                     <li class=""><a href="index.html">Home</a></li>
-                                    <li class=""><a href="about-us.html">About</a></li>
+                                    <li class=""><a class="active" href="about-us.html">About</a></li>
                                     <li class="has-droupdown"><a href="#">Academics</a>
                                         <ul class="submenu">
                                             <li><a href="curriculum.html">Curriculum Programme</a></li>
@@ -510,7 +510,7 @@
                                         <div class="col-lg-6">
                                             <ul class="footer-link link-hover">
                                                 <li><a href="index.html">Home</a></li>
-                                                <li><a class="active" href="about-us.html">About</a></li>
+                                                <li><a href="about-us.html">About</a></li>
                                                 <li><a href="curriculum.html">Curriculum</a></li>
                                                 <li><a href="sports.html">Sports</a></li>
                                                 <li><a href="events.html">Events</a></li>
