--- a/about-us.html
+++ b/about-us.html
@@ -320,7 +320,7 @@
                     <div class="col-lg-4" data-sal-delay="150" data-sal="slide-up" data-sal-duration="800">
                         <div class="why-choose-box-3 features-box color-primary-style">
                             <div class="thumbnail">
-                                <img src="https://images.unsplash.com/photo-1616512659455-111d3367649f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8c2Nob29sJTIwYnVpbGRpbmd8ZW58MHx8MHx8&w=1000&q=80"
+                                <img src="assets/images/bg/banner-101.jpeg"
                                     alt="">
                             </div>
                             <div class="content m-5">
