contact page changes

--- a/contact-us.html
+++ b/contact-us.html
@@ -254,7 +254,7 @@
                             <ul class="address-list">
                                 <li>
                                     <h5 class="title">Address</h5>
-                                    <p>Urella road, chevvella</p>
+                                    <p>Urella road, chevella</p>
                                 </li>
                                 <li>
                                     <h5 class="title">Email</h5>
